docs/api/qiskit/0.19/qiskit.visualization.pulse.qcstyle.mdx
---
title: qcstyle (v0.19)
description: API reference for qiskit.visualization.pulse.qcstyle in qiskit v0.19
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit.visualization.pulse.qcstyle
---

<span id="module-qiskit.visualization.pulse.qcstyle" />

# qcstyle

Style sheets for pulse visualization.

**Classes**

|                                                                                                                                                    |                                                   |
| -------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------- |
| [`PulseStyle`](#qiskit.visualization.pulse.qcstyle.PulseStyle "qiskit.visualization.pulse.qcstyle.PulseStyle")(\[figsize, title\_font\_size, …])   | Style sheet for Qiskit-Pulse sample pulse drawer. |
| [`SchedStyle`](#qiskit.visualization.pulse.qcstyle.SchedStyle "qiskit.visualization.pulse.qcstyle.SchedStyle")(\[figsize, fig\_unit\_h\_table, …]) | Style sheet for Qiskit-Pulse schedule drawer.     |

### PulseStyle

<Class id="qiskit.visualization.pulse.qcstyle.PulseStyle" github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/visualization/pulse/qcstyle.py" signature="PulseStyle(figsize=(7, 5), title_font_size=18, wave_color=None, bg_color=None, num_points=None, dpi=None)" modifiers="class">
  Style sheet for Qiskit-Pulse sample pulse drawer.

  Create new style sheet.

  **Parameters**

  *   **figsize** (`Tuple`\[`float`, `float`]) – Size of figure.
  *   **title\_font\_size** (`int`) – Font size of schedule name in title.
  *   **wave\_color** (`Optional`\[`List`\[`str`]]) – Color code or name of colors for real and imaginary part of SamplePulse waveform.
  *   **bg\_color** (`Optional`\[`str`]) – Color code or name of color for pulse canvas background.
  *   **num\_points** (`Optional`\[`int`]) – Number of points for interpolation.
  *   **dpi** (`Optional`\[`int`]) – Resolution in the unit of dot per inch to save image.
</Class>

### SchedStyle

<Class id="qiskit.visualization.pulse.qcstyle.SchedStyle" github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/visualization/pulse/qcstyle.py" signature="SchedStyle(figsize=(10, 12), fig_unit_h_table=0.4, use_table=True, table_columns=2, table_font_size=10, axis_font_size=18, label_font_size=10, icon_font_size=18, title_font_size=25, label_ch_linestyle='--', label_ch_color=None, label_ch_alpha=0.3, d_ch_color=None, u_ch_color=None, m_ch_color=None, s_ch_color=None, s_ch_linestyle='-', table_color=None, bg_color=None, num_points=1000, dpi=150, remove_spacing=True, max_table_ratio=0.5, vertical_span=0.2, axis_formatter=None)" modifiers="class">
  Style sheet for Qiskit-Pulse schedule drawer.

  Create new style sheet.

  **Parameters**

  *   **figsize** (`Tuple`\[`float`, `float`]) – Size of figure.
  *   **fig\_unit\_h\_table** (`float`) – Height of row of event table. See Example.
  *   **use\_table** (`bool`) – When set True use event table.
  *   **table\_columns** (`int`) – Number of event table columns.
  *   **table\_font\_size** (`int`) – Font size of event table.
  *   **axis\_font\_size** (`int`) – Font size of channel aliases.
  *   **label\_font\_size** (`int`) – Font size of labels in canvas.
  *   **icon\_font\_size** (`int`) – Size of symbols.
  *   **title\_font\_size** (`int`) – Font size of schedule name in title.
  *   **label\_ch\_linestyle** (`str`) – Line style for channel pulse label line.
  *   **label\_ch\_color** (`Optional`\[`str`]) – Color code or name of color for channel pulse label line.
  *   **label\_ch\_alpha** (`float`) – Transparency for channel pulse label line from 0 to 1.
  *   **d\_ch\_color** (`Optional`\[`List`\[`str`]]) – Color code or name of colors for real and imaginary part of waveform at d channels.
  *   **u\_ch\_color** (`Optional`\[`List`\[`str`]]) – Color code or name of colors for real and imaginary part of waveform at u channels.
  *   **m\_ch\_color** (`Optional`\[`List`\[`str`]]) – Color code or name of colors for real and imaginary part of waveform at m channels.
  *   **s\_ch\_color** (`Optional`\[`List`\[`str`]]) – Color code or name of color for snapshot channel line.
  *   **s\_ch\_linestyle** (`str`) – Line style for snapshot line.
  *   **table\_color** (`Optional`\[`str`]) – Color code or name of color for event table columns of time, channel, event information.
  *   **bg\_color** (`Optional`\[`str`]) – Color code or name of color for canvas background.
  *   **num\_points** (`int`) – Number of points for interpolation of each channel.
  *   **dpi** (`int`) – Resolution in the unit of dot per inch to save image.
  *   **remove\_spacing** (`bool`) – Remove redundant spacing when the waveform has no negative values.
  *   **max\_table\_ratio** (`float`) – Maximum portion of the plot the table can take up. Limited to range between 0 and 1.
  *   **vertical\_span** (`float`) – Spacing on top and bottom of pulse canvas.
  *   **axis\_formatter** (`Optional`\[`str`]) – Format of horizontal axis of the plot. This is convenient when you set `dt` option for the drawer. For example, formatter of `%.3e` gives you horizontal axis values in the scientific notation with 3 digits.

  **Example**

  Height of the event table is decided by multiple parameters.:

  ```python
  figsize = (10, 12)
  fig_unit_h_table = 0.4
  table_columns = 2
  max_table_ratio = 0.5
  ```

  With this setup, events are shown in double-column style with each line height of 0.4 inch and the table cannot exceed 5 inch. Thus 12 lines are maximum and up to 24 events can be shown. If you want to show more events, increase figure height or reduce size of line height and table font size.
</Class>

